<resources>
    <string name="app_name">Wine Tasting Notes</string>

    <!-- Open Activity -->
    <string name="add_tasting">\t\tAdd a New Tasting\t\t</string>
    <string name="review_tasting">\t\tReview a Previous Tasting\t\t</string>
    <string name="review_wine">\t\tReview a Particular Wine\t\t</string>
    <string name="locate_wine">\t\tLocate Tasting\t\t</string>
    <string name="quit_app">\t\tQuit Wine Tasting Notes\t\t</string>

    <!-- Add Tasting Activity-->
    <string name="tasting_name">\t\tName of Tasting\t\t</string>
    <string name="tasting_date">\t\tDate of Tasting\t\t</string>
    <string name="tasting_location">\t\tTasting Location\t\t</string>
    <string name="tasting_continue">\t\tContinue\t\t</string>

    <!-- Add Notes Activity-->
    <string name="add_notes_title">Wine</string>
    <string name="varietal_text_view">Varietal</string>
    <string name="vintage_text_view">Vintage</string>
    <string name="winery_text_view">Winery</string>
    <string name="vineyard_text_view">Vineyard</string>
    <string name="price_text_view">Price</string>
    <string name="summary_button">SUMMARY</string>

    <!-- Rating Activity-->
    <string name="header_wine">Wine</string>
    <string name="header_appearance">Color</string>
    <string name="header_aroma">Aroma</string>
    <string name="header_body">Body</string>
    <string name="header_taste">Taste</string>
    <string name="header_finish">Finish</string>
    <string name="header_total">Total</string>
    <string name="header_rank">Rank</string>
    <string name="header_notes">Notes</string>

    <string name="a1" translatable="false">1A</string>
    <string name="b1" translatable="false">1B</string>
    <string name="a2" translatable="false">2A</string>
    <string name="b2" translatable="false">2B</string>
    <string name="a3" translatable="false">3A</string>
    <string name="b3" translatable="false">3B</string>
    <string name="a4" translatable="false">4A</string>
    <string name="b4" translatable="false">4B</string>
    <string name="a5" translatable="false">5A</string>
    <string name="b5" translatable="false">5B</string>

    <string name="touch_text">\tTap an attribute to see the rating parameters, a purple button
        \t\n\tto change the contents, and the total button to add the ratings.\t</string>

    <string name="rank">\t\tRank Wines\t\t</string>
    <string name="rating_continue">\t\tContinue\t\t</string>

    <!-- Wines Activity-->
    <string name="header_vintage">Vintage</string>
    <string name="header_varietal">Varietal</string>
    <string name="header_winery">Winery</string>
    <string name="header_vineyard">Vineyard / Desgnation</string>
    <string name="header_price">Price</string>

    <string name="wines_enter">\t\tEnter Wines\t\t</string>

    <string name="add_photos">\t\tAdd Photos\t\t</string>
    <string name="add_photo">\t\tAdd a Photo\t\t</string>

    <string name="wines_save">\t\tSave These Wines\t\t</string>

    <!-- Adapter -->
    <string name="adapter_date">Date</string>
    <string name="adapter_location">Location</string>
    <string name="adapter_name">Name</string>
    <string name="adapter_vintage">Vintage</string>
    <string name="adapter_winery">Winery</string>
    <string name="adapter_varietal">Varietal</string>

    <!-- Review Tasting -->
    <string name="review_tasting_label">Tasting Information</string>
    <string name="review_tasting_name">Name: </string>
    <string name="review_date_name">Date: </string>
    <string name="review_location_name">Location: </string>

    <string name="file_provider_authority" translatable="false">com.quiro.winetastingnotes.fileprovider</string>


</resources>
