<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/vines2"
    tools:context="edu.orangecoastcollege.cs273.jburk.winetasting.OpenActivity">

    <Button
        android:id="@+id/add_tasting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="newTasting"
        android:text="@string/add_tasting"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/review_tasting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/review_tasting"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:textSize="32sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/review_wine"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:textSize="32sp"/>


</LinearLayout>
