<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="viewWineList"
    android:clickable="true"
    android:id="@+id/tastingListLinearLayout">

    <ImageView
        android:id="@+id/wineBottleImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/wine_bottle">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameListTextView"
            android:textAppearance="@color/midNightBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adapter_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dateListTextView"
            android:textAppearance="@color/midNightBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adapter_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/locationListTextView"
            android:textAppearance="@color/midNightBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adapter_location"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
